opti: 1. add z-index property in lark-full-window mode to avoid covered by others 2. pass the player obviously to plugins

--- a/src/css/larkplayer.less
+++ b/src/css/larkplayer.less
@@ -88,8 +88,8 @@
     height:100% !important;
     transform:none !important;
 
-    /* intentionally not !important */
     object-fit:contain;
+    z-index: 999999;
 }
 
 // 确保全屏时，不会因为这些定位的原因导致视频看不见了
